--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,6 +26,7 @@
     -->
 <!-- material icons -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+<link rel="stylesheet" href="style.css">
 <!-- ---- -->
 
     <title>React App</title>
@@ -43,5 +44,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <a href="https://api.whatsapp.com/send?phone=+5493442559765&text=Hola%20quisiera%20mas%20informacion%20?,su%20consulta%20no%20nos%20molesta%20!!!" class="float" target="_blank">
+    <i class="fa fa-whatsapp my-float"></i>
+    </a>
+      
   </body>
 </html>
